# keadex

./: .eslintrc.json  .gitattributes  .gitignore  CREDITS.md  LICENSE  README.md  changelog.config.js  eslint.config.mjs  jest.config.ts  migrations.json  nx.json  nxrelease.config.js  package-lock.json  package.json  project.json  tsconfig.base.json  workspace.json
apps/keadex-mina/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/keadex-mina/src-tauri/capabilities/: desktop.json  migrated.json
apps/keadex-mina/src-tauri/icons/: icon.icns
apps/keadex-mina/src-tauri/src/: lib.rs  main.rs
apps/keadex-mina/src-tauri/src/api/filesystem/: mod.rs  native_fs.rs  web_fs.rs
apps/keadex-mina/src-tauri/src/constants/: diagram_constants.rs  mod.rs
apps/keadex-mina/src-tauri/src/controller/: ai_controller.rs  app_settings_controller.rs  diagram_controller.rs  hook_controller.rs  library_controller.rs  mod.rs  project_controller.rs  project_controller_web.rs  search_controller.rs  web_controller.rs  web_viewer_controller.rs
apps/keadex-mina/src-tauri/src/core/: app.rs  data_synchronizer.rs  logger.rs  mod.rs  project_initializer.rs  resolver.rs  serializer.rs  state.rs
apps/keadex-mina/src-tauri/src/dao/: mod.rs
apps/keadex-mina/src-tauri/src/dao/filesystem/: app_settings_dao.rs  (+3 more)
apps/keadex-mina/src-tauri/src/error_handling/: errors.rs  mina_error.rs  mod.rs
apps/keadex-mina/src-tauri/src/helper/: diagram_helper.rs  distribution_helper.rs  fs_helper.rs  hook_helper.rs  library_helper.rs  mod.rs  project_helper.rs  relationship_helper.rs  search_helper.rs
apps/keadex-mina/src-tauri/src/model/: diagram_element_search_results.rs  file_search_results.rs  hook.rs  load_project_aliases_opts.rs  mod.rs  project.rs  project_alias.rs  project_library.rs  project_settings.rs  user_settings.rs
apps/keadex-mina/src-tauri/src/multithreading/: future_worker.rs  mod.rs  parallel_executor.rs
apps/keadex-mina/src-tauri/src/parser/: mod.rs
apps/keadex-mina/src-tauri/src/rendering_system/: graph_render_backend.rs  mod.rs  renderer.rs  style_constants.rs
apps/keadex-mina/src-tauri/src/repository/: app_settings_repository.rs  diagram_repository.rs  mod.rs  project_repository.rs
apps/keadex-mina/src-tauri/src/service/: ai_service.rs  diagram_service.rs  hook_service.rs  mod.rs  search_service.rs
apps/keadex-mina/src-tauri/src/templates/: demo_diagram_puml.rs  demo_diagram_spec.rs  hooks_js_file.rs  mod.rs  readme_file.rs
apps/keadex-mina/src-tauri/src/validator/: mod.rs  project_validator.rs
apps/keadex-mina/src-tauri/src/view/: menu.rs
libs/mina-cli/: Cargo.toml  README.md  project.json
libs/mina-cli/.cargo/: config.toml
libs/mina-cli/src/: lib.rs  main.rs
libs/mina-cli/src/commands/: create_component.rs  create_container.rs  create_diagram.rs  create_person.rs  create_project.rs  create_system.rs  delete_diagram.rs  edit_diagram_plantuml_code.rs  find_dependent_elements.rs  list_diagrams.rs  list_library_elements.rs  mod.rs  read_all_diagrams.rs  read_diagram.rs  read_remote_diagram.rs  search_and_replace.rs  search_diagram_element.rs  search_library_element.rs  update_component.rs  update_container.rs  update_person.rs  update_system.rs  upsert_component.rs  upsert_container.rs  upsert_person.rs  upsert_system.rs  validate_diagram.rs  validate_plantuml_code.rs  validate_project.rs
libs/mina-cli/src/constants/: messages.rs
libs/mina-cli/src/helpers/: mina_lifecycle_helper.rs  mod.rs
libs/mina-cli/src/model/: cli.rs  mod.rs  response.rs
libs/mina-cli/src/model/commands/: create_component.rs  create_container.rs  create_person.rs  create_system.rs  diagram_element.rs  find_dependent_elements.rs  mod.rs  read_diagram.rs  search_and_replace.rs  search_diagram_element.rs  search_library_element.rs  update_component.rs  update_container.rs  update_person.rs  update_system.rs
libs/mina-live/src-rust/: Cargo.toml
libs/mina-live/src-rust/pkg/: mina_live.d.ts  mina_live.js  mina_live_bg.js  mina_live_bg.wasm  mina_live_bg.wasm.d.ts  package.json
libs/mina-live/src-rust/src/: lib.rs
libs/mina-mcp-server/: Cargo.toml  README.md  eslint.config.mjs  jest.config.ts  package.json  project.json  tsconfig.lib.json  tsconfig.spec.json  webpack.config.ts
libs/mina-mcp-server/scripts/: prepare-npm-binaries.js  publish-packages.js
libs/mina-mcp-server/src/: lib.rs  main.rs
libs/mina-mcp-server/src-js/: index.ts  mina.ts  tw-elements-mock.js
libs/mina-mcp-server/src-js/api/: diagrams.ts  index.ts
libs/mina-mcp-server/src-js/bridge/: bridge.ts
libs/mina-mcp-server/src/core/: mod.rs  node_bridge.rs  server.rs
libs/mina-mcp-server/src/models/requests/: create_component_request.rs  create_container_request.rs  create_diagram_request.rs  create_person_request.rs  create_project_request.rs  create_system_request.rs  diagram_element_request.rs  edit_plantuml_request.rs  find_diagram_element_request.rs  generate_plantuml_code_diagram_request.rs  generate_plantuml_code_elements_request.rs  local_diagram_base_request.rs  local_project_base_request.rs  mod.rs  read_local_diagram_request.rs  read_remote_diagram_request.rs  render_diagram_request.rs  search_and_replace_request.rs  update_component_request.rs  update_container_request.rs  update_person_request.rs  update_system_request.rs  validate_plantuml_code_request.rs
libs/mina-mcp-server/src/models/responses/: base_response.rs  found_element_response.rs  found_elements_response.rs  generic_response.rs  list_local_diagrams_response.rs  mod.rs  read_all_local_diagrams_response.rs  render_diagram_response.rs
libs/mina-mcp-server/src/services/: diagram_service.rs  gh_service.rs  keadex_battisti_service.rs  library_service.rs  mod.rs  project_service.rs
libs/mina-mcp-server/src/tools/: diagrams_tools.rs  local_diagrams_tools.rs  local_library_tools.rs  local_project_tools.rs  mod.rs  plantuml_code_tools.rs  remote_diagrams_tools.rs
libs/mina-react/src-rust/: Cargo.toml
libs/mina-react/src-rust/src/: lib.rs
libs/mina-react/src-rust/src/controller/: mod.rs  web_controller.rs  web_viewer_controller.rs
(+1188 files in other folders)
