[package]
name = "mina-cli"
version = "1.10.0"
description = "CLI for interacting with Mina projects."
authors = ["Keadex"]
license = "MIT"
repository = "https://github.com/keadex/keadex"
edition = "2021"
rust-version = "1.77.1"

[dependencies]
wasm-bindgen = "0.2"
clap = {version = "4.5.20", features = ["derive"]}
clap-markdown = "0.1.4"
keadex_mina = { path = "../../apps/keadex-mina/src-tauri" }
