[package]
name = "mina-cli"
version = "2.5.1"
description = "CLI for interacting with Mina projects."
authors = ["Keadex"]
license = "MIT"
repository = "https://github.com/keadex/keadex"
edition = "2021"
rust-version = "1.77.1"

[dependencies]
wasm-bindgen = "0.2"
clap = {version = "4.5", features = ["derive"]}
clap-markdown = "0.1"
serde = { version = "1.0", features = ["derive"] }
strfmt = "0.2"
tokio = "1.43"
uuid = { version = "1.4.1", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
] }
keadex_mina = { path = "../../apps/keadex-mina/src-tauri" }
