[package]
name = "mina-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.3", features = ["server", "macros", "transport-io"] }
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
schemars = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
keadex_mina = { path = "../../apps/keadex-mina/src-tauri" }
mina-cli = { path = "../../libs/mina-cli" }
