[package]
name = "mina-mcp-server"
description = "MCP Server for interacting with Mina projects."
version = "3.0.1"
edition = "2024"
authors = ["Keadex"]
license = "MIT"
repository = "https://github.com/keadex/keadex"


[dependencies]
base64 = "0.22"
bytes = "1"
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }
tokio = { version = "1.49", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
schemars = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
keadex_mina = { path = "../../apps/keadex-mina/src-tauri" }
mina-cli = { path = "../../libs/mina-cli" }
