[package]
name = "keadex_mina"
version = "1.0.0-15"
description = "Desktop application to draw, manage and share the architectures of software systems."
authors = ["Keadex"]
license = "MIT"
repository = ""
default-run = "keadex_mina"
edition = "2021"
rust-version = "1.77.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = ["isolation"], optional = true }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [
  "macos-private-api",
  "updater",
  "api-all",
  "isolation",
], optional = true }
log = { version = "0.4", features = ["serde"] }
env_logger = "0.8.4"
state = "0.6"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
notify = "4.0.17"
walkdir = "2.4.0"
fs2 = { version = "0.4.3", optional = true }
pest = "2.7.4"
pest_derive = "2.7.4"
convert_case = "0.6.0"
snailquote = "0.3.1"
ts-rs = "6.2.1"
uuid = { version = "1.4.1", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
], optional = true }
data-url = "0.2.0"
async-openai = { version = "0.10.3", optional = true }
dotenv = "0.15.0"
wasm-bindgen = "0.2"
bomboni_wasm = { version = "0.1", features = [
  "derive",
  "js",
], default-features = false }
fancy-regex = "0.13.0"


[features]
default = ["desktop", "custom-protocol"]
desktop = [
  "web",
  "tauri",
  "dep:uuid",
  "dep:async-openai",
  "dep:tauri-build",
  "dep:fs2",
]
custom-protocol = ["tauri/custom-protocol"]
web = []
