[package]
name = "mina-live"
version = "2.10.3"
description = "Rust code to port Keadex Mina to the web"
authors = ["Keadex"]
license = "MIT"
repository = "https://github.com/keadex/keadex"
edition = "2021"
rust-version = "1.77.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
keadex_mina = { path = "../../../apps/keadex-mina/src-tauri", default-features = false, features = [
  "web",
] }
