[package]
name = "mina-react"
version = "1.0.0"
description = "Rust code to render Mina C4 Model diagrams on web"
authors = ["Keadex"]
license = "MIT"
repository = "https://github.com/keadex/keadex"
edition = "2021"
rust-version = "1.77.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
keadex_mina = { path = "../../../apps/keadex-mina/src-tauri", default-features = false, features = [
  "web",
] }
